--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.0.0",
     "@types/jquery": "^3.5.16",
     "@types/slick-carousel": "^1.6.37",
+    "babel-preset-es2015": "^6.24.1",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
